# Coder-Workspaces

./: .gitignore  CLAUDE.md  CODER_ISSUE_AUTOMATION.md  STARSHIP_DEBUGGING_LOG.md  WORKSPACE_SETUP.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: SECRETS.md
.github/workflows/: build-agentmemory.yaml  build-base-dev.yaml  build-chrome-tool.yaml  build-cliproxy.yaml  build-coder-agents-sidecars.yaml  build-coder-pwa.yaml  build-cpp-dev.yaml  build-esp32-dev.yaml  build-fullstack-dev.yaml  build-hapi-hub.yaml  build-nextjs-dev.yaml  build-playwright-dev.yaml  build-python-dev.yaml  build-rust-dev.yaml  build-vite-dev.yaml  check-upstream-releases.yaml  coder-issue-automation.yaml  coder-labels-wrapper.yaml  coder-labels.yaml  coder-task-cleanup.yaml  coder-task-comment.yaml  coder-tasks-wrapper.yaml  coder-workspace-launch-wrapper.yaml  coder-workspace-launch.yaml  update-coder-agents-config.yaml  update-coder-templates.yaml
coder-agents-config/: README.md  mcp-servers.yaml  models.yaml  plan-mode-instructions.txt  providers.yaml  sync.sh  system-prompt.txt  template-allowlist.yaml
coder-agents-sidecars/: .env.example  .gitignore  README.md  docker-compose.yml
coder-agents-sidecars/claude-sidecar/: Dockerfile  README.md
coder-agents-sidecars/codex-sidecar/: Dockerfile  (+1 more)
host-services/: README.md
project-scaffolds/cpp/: .gitignore  CMakeLists.txt
project-scaffolds/cpp/.devcontainer/: devcontainer.json
project-scaffolds/cpp/src/: main.cpp
scripts/: deploy-issue-automation.sh
workspace-templates/: old.tf  repo-devcontainer.tf
(+239 files in other folders)
